--- a/week1/week1-MultilabelClassification.ipynb
+++ b/week1/week1-MultilabelClassification.ipynb
@@ -33,11 +33,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "File 'data\\\\train.tsv' successfully downloaded\n",
+      "File 'data\\\\validation.tsv' successfully downloaded\n",
+      "File 'data\\\\test.tsv' successfully downloaded\n",
+      "File 'data\\\\text_prepare_tests.tsv' successfully downloaded\n"
+     ]
+    }
+   ],
    "source": [
     "import sys\n",
     "sys.path.append(\"..\")\n",
@@ -56,10 +65,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 2,
+   "metadata": {},
    "outputs": [],
    "source": [
     "from grader import Grader"
@@ -67,10 +74,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 3,
+   "metadata": {},
    "outputs": [],
    "source": [
     "grader = Grader()"
@@ -92,11 +97,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[nltk_data] Downloading package stopwords to\n",
+      "[nltk_data]     C:\\Users\\Danie\\AppData\\Roaming\\nltk_data...\n",
+      "[nltk_data]   Unzipping corpora\\stopwords.zip.\n"
+     ]
+    }
+   ],
    "source": [
     "import nltk\n",
     "nltk.download('stopwords')\n",
@@ -112,10 +125,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 5,
+   "metadata": {},
    "outputs": [],
    "source": [
     "from ast import literal_eval\n",
@@ -125,10 +136,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 6,
+   "metadata": {},
    "outputs": [],
    "source": [
     "def read_data(filename):\n",
@@ -139,10 +148,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 7,
+   "metadata": {},
    "outputs": [],
    "source": [
     "train = read_data('data/train.tsv')\n",
@@ -152,13 +159,167 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>title</th>\n",
+       "      <th>tags</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>How to draw a stacked dotplot in R?</td>\n",
+       "      <td>[r]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>mysql select all records where a datetime fiel...</td>\n",
+       "      <td>[php, mysql]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>How to terminate windows phone 8.1 app</td>\n",
+       "      <td>[c#]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>get current time in a specific country via jquery</td>\n",
+       "      <td>[javascript, jquery]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Configuring Tomcat to Use SSL</td>\n",
+       "      <td>[java]</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                               title                  tags\n",
+       "0                How to draw a stacked dotplot in R?                   [r]\n",
+       "1  mysql select all records where a datetime fiel...          [php, mysql]\n",
+       "2             How to terminate windows phone 8.1 app                  [c#]\n",
+       "3  get current time in a specific country via jquery  [javascript, jquery]\n",
+       "4                      Configuring Tomcat to Use SSL                [java]"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "train.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 100000 entries, 0 to 99999\n",
+      "Data columns (total 2 columns):\n",
+      "title    100000 non-null object\n",
+      "tags     100000 non-null object\n",
+      "dtypes: object(2)\n",
+      "memory usage: 1.5+ MB\n"
+     ]
+    }
+   ],
+   "source": [
+    "train.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>title</th>\n",
+       "      <th>tags</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>Obtaining the object the java.lang.Class&lt;T&gt; ob...</td>\n",
+       "      <td>[java, class]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>iPad not selecting all text inside a text inpu...</td>\n",
+       "      <td>[javascript, jquery, html, ios]</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                                title  \\\n",
+       "10  Obtaining the object the java.lang.Class<T> ob...   \n",
+       "11  iPad not selecting all text inside a text inpu...   \n",
+       "\n",
+       "                               tags  \n",
+       "10                    [java, class]  \n",
+       "11  [javascript, jquery, html, ios]  "
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "train[10:12]"
    ]
   },
   {
@@ -177,10 +338,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 13,
+   "metadata": {},
    "outputs": [],
    "source": [
     "X_train, y_train = train['title'].values, train['tags'].values\n",
@@ -199,10 +358,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 14,
+   "metadata": {},
    "outputs": [],
    "source": [
     "import re"
@@ -210,10 +367,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 20,
+   "metadata": {},
    "outputs": [],
    "source": [
     "REPLACE_BY_SPACE_RE = re.compile('[/(){}\\[\\]\\|@,;]')\n",
@@ -226,19 +381,24 @@
     "        \n",
     "        return: modified initial string\n",
     "    \"\"\"\n",
-    "    text = # lowercase text\n",
-    "    text = # replace REPLACE_BY_SPACE_RE symbols by space in text\n",
-    "    text = # delete symbols which are in BAD_SYMBOLS_RE from text\n",
-    "    text = # delete stopwords from text\n",
+    "    text = text.lower() # lowercase text\n",
+    "    text = re.sub(REPLACE_BY_SPACE_RE, \" \", text)  # replace REPLACE_BY_SPACE_RE symbols by space in text\n",
+    "    text = re.sub(BAD_SYMBOLS_RE, \"\", text) # delete symbols which are in BAD_SYMBOLS_RE from text\n",
+    "    text = \" \" + text + \" \"\n",
+    "    for stopword in STOPWORDS:\n",
+    "        text = text.replace(\" \"+stopword+\" \", \" \") # delete stopwords from text\n",
+    "    text = re.sub('[ ][ ]+', \" \", text)\n",
+    "    if text[0] == ' ':\n",
+    "        text = text[1:]\n",
+    "    if text[-1] == ' ':\n",
+    "        text = text[:-1]\n",
     "    return text"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 21,
+   "metadata": {},
    "outputs": [],
    "source": [
     "def test_text_prepare():\n",
@@ -254,11 +414,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Basic tests are passed.\n"
+     ]
+    }
+   ],
    "source": [
     "print(test_text_prepare())"
    ]
@@ -272,11 +438,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Current answer for task TextPrepare is:\n",
+      " sqlite php readonly\n",
+      "creating multiple textboxes dynamically\n",
+      "self one prefer javascript\n",
+      "save php date...\n"
+     ]
+    }
+   ],
    "source": [
     "prepared_questions = []\n",
     "for line in open('data/text_prepare_tests.tsv', encoding='utf-8'):\n",
@@ -296,10 +472,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 24,
+   "metadata": {},
    "outputs": [],
    "source": [
     "X_train = [text_prepare(x) for x in X_train]\n",
@@ -309,11 +483,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['draw stacked dotplot r',\n",
+       " 'mysql select records datetime field less specified value',\n",
+       " 'terminate windows phone 81 app']"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "X_train[:3]"
    ]
@@ -329,10 +514,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 53,
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Dictionary of all tags from train corpus with their counts.\n",
@@ -340,9 +523,58 @@
     "# Dictionary of all words from train corpus with their counts.\n",
     "words_counts = {}\n",
     "\n",
-    "######################################\n",
-    "######### YOUR CODE HERE #############\n",
-    "######################################"
+    "\n",
+    "#trial for +1...\n",
+    "for sentence in X_train:\n",
+    "    for word in sentence.split():\n",
+    "         words_counts[word] = words_counts.get(word, 0) +1\n",
+    "\n",
+    "        \n",
+    "for it in y_train:\n",
+    "    for tag in it:\n",
+    "        tags_counts[tag] = tags_counts.get(tag, 0) +1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[('draw', 173), ('stacked', 20), ('dotplot', 1)]"
+      ]
+     },
+     "execution_count": 61,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "list(words_counts.items())[:3]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[('r', 1727), ('php', 13907), ('mysql', 3092)]"
+      ]
+     },
+     "execution_count": 62,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "list(tags_counts.items())[:3]"
    ]
   },
   {
@@ -359,11 +591,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 63,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Current answer for task WordsTagsCount is:\n",
+      " javascript,c#,java\n",
+      "using,php,java...\n"
+     ]
+    }
+   ],
    "source": [
     "most_common_tags = sorted(tags_counts.items(), key=lambda x: x[1], reverse=True)[:3]\n",
     "most_common_words = sorted(words_counts.items(), key=lambda x: x[1], reverse=True)[:3]\n",
@@ -419,15 +659,52 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 76,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#sort words_counts by the frequency x[1], second element in each dicitonary item, and sort in reverse order\n",
+    "most_common = sorted(words_counts.items(), key=lambda x: x[1], reverse=True)[:6000]\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 80,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[('using', 8278),\n",
+       " ('php', 5614),\n",
+       " ('java', 5501),\n",
+       " ('file', 5055),\n",
+       " ('javascript', 4746),\n",
+       " ('error', 4388),\n",
+       " ('get', 4301),\n",
+       " ('c#', 4188),\n",
+       " ('python', 4073),\n",
+       " ('string', 3652)]"
+      ]
+     },
+     "execution_count": 80,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "most_common[:10] #check order to ensure working correctly and to ensure enumerate works below"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 88,
+   "metadata": {},
    "outputs": [],
    "source": [
     "DICT_SIZE = 5000\n",
-    "WORDS_TO_INDEX = ####### YOUR CODE HERE #######\n",
-    "INDEX_TO_WORDS = ####### YOUR CODE HERE #######\n",
+    "WORDS_TO_INDEX = {p[0]:i for i,p in enumerate(most_common[:DICT_SIZE])}\n",
+    "INDEX_TO_WORDS = {WORDS_TO_INDEX[k]:k for k in WORDS_TO_INDEX}\n",
     "ALL_WORDS = WORDS_TO_INDEX.keys()\n",
     "\n",
     "def my_bag_of_words(text, words_to_index, dict_size):\n",
@@ -438,18 +715,74 @@
     "        return a vector which is a bag-of-words representation of 'text'\n",
     "    \"\"\"\n",
     "    result_vector = np.zeros(dict_size)\n",
-    "    ######################################\n",
-    "    ######### YOUR CODE HERE #############\n",
-    "    ######################################\n",
+    "    for word in text.split():\n",
+    "        if word in words_to_index:\n",
+    "            result_vector[words_to_index[word]]+=1\n",
     "    return result_vector"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 81,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[('using', 0),\n",
+       " ('php', 1),\n",
+       " ('java', 2),\n",
+       " ('file', 3),\n",
+       " ('javascript', 4),\n",
+       " ('error', 5),\n",
+       " ('get', 6),\n",
+       " ('c#', 7),\n",
+       " ('python', 8),\n",
+       " ('string', 9)]"
+      ]
+     },
+     "execution_count": 81,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "list(WORDS_TO_INDEX.items())[:10] #confirm order of words with frequency from most_common above"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 82,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[(0, 'using'),\n",
+       " (1, 'php'),\n",
+       " (2, 'java'),\n",
+       " (3, 'file'),\n",
+       " (4, 'javascript'),\n",
+       " (5, 'error'),\n",
+       " (6, 'get'),\n",
+       " (7, 'c#'),\n",
+       " (8, 'python'),\n",
+       " (9, 'string')]"
+      ]
+     },
+     "execution_count": 82,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "list(INDEX_TO_WORDS.items())[:10]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 89,
+   "metadata": {},
    "outputs": [],
    "source": [
     "def test_my_bag_of_words():\n",
@@ -464,11 +797,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 90,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Basic tests are passed.\n"
+     ]
+    }
+   ],
    "source": [
     "print(test_my_bag_of_words())"
    ]
@@ -1083,7 +1422,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.4.3"
+   "version": "3.6.4"
   }
  },
  "nbformat": 4,
